packages/pug-lexer/test/errors/old-prefixed-each.pug
ul
  - each foo in bar
    li= foo
